[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Start_Scene.gd" type="Script" id=2]
[ext_resource path="res://Assets/planet.png" type="Texture" id=3]
[ext_resource path="res://Assets/sounds/cursor_select.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Start_Scene" type="Node2D"]
script = ExtResource( 2 )

[node name="Itens" type="Node2D" parent="."]

[node name="start" type="Node2D" parent="Itens"]
position = Vector2( 50, 140 )
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="Itens/start"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="options" type="Node2D" parent="Itens"]
position = Vector2( 50, 162 )
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="Itens/options"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"

[node name="exit" type="Node2D" parent="Itens"]
position = Vector2( 49, 183 )
__meta__ = {
"_edit_group_": true
}

[node name="label" type="Label" parent="Itens/exit"]
margin_left = 1.0
margin_right = 41.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "EXIT"

[node name="seta" type="Node2D" parent="."]
position = Vector2( 33, 148 )
__meta__ = {
"_edit_group_": true
}

[node name="Planet" type="Sprite" parent="seta"]
modulate = Color( 0.94902, 0.701961, 0.94902, 1 )
scale = Vector2( 0.141667, 0.125 )
texture = ExtResource( 3 )

[node name="timer_blink" type="Timer" parent="."]
wait_time = 0.1

[node name="cursor_select" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.8

[connection signal="timeout" from="timer_blink" to="." method="_on_timer_blink_timeout"]
